# multi_object_avoidance_via_clf_cbf

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: clf_cbf.yaml  clf_cbf_simu.yaml  color.yaml  communication.yaml  fake_map.yaml  fake_robot.yaml  obstacle1.yaml  obstacle2.yaml  robot_param.yaml  simulation1.yaml  simulation2.yaml
include/: cbf.h  communication.h  driver.h  fake_map.h  fake_robot.h  map_utils.h  point.h  pose.h  simutest.h
include/utils/: line.h  plotting.h  ros_utils.h  timing.h  utils.h
launch/: cbf.launch  fake_map.launch  fake_robot.launch  simulation.launch  test_QP.launch
matlab_simulation/: different_obstacle_scenarios_simulation.m
matlab_simulation/dynsys/@CassieRob/: CassieRob.m  defineCbf.m  defineClf.m  plot_count.mat
matlab_simulation/functions/: computeCoMPosition.m  computeDistance.m  computeDistanceToManifold.m  computeEgoPolorCoordinate.m  computeEgoPolorCoordinateFacingTowardXaxis.m  computeEgoPolorCoordinateFoV.m  computeEuclideanPoseDistance.m  computeFeedbackControlVariables.m  computeFootPosition.m  computeForwardControlVariables.m  computeOptimalOmega.m  computeOptimalVx.m  computeOptimalVy.m  constructAMatrix.m  getControlParameters.m  getEquationNumbers.m  moveAlongRobotLocalFrameALIP.m  packToResults.m  plotRobot2DPoses.m  rotateInPlace.m
matlab_simulation/lib/@CtrlAffineSys/: CtrlAffineSys.m  ctrlCbfClfQp.m  initSys.m  plot_count.mat
rviz/: cbf.rviz  simulation.rviz
src/: QuadProg++.cc  cbf.cpp  communication.cpp  driver.cpp  fake_map.cpp  fake_map_publisher.cpp  fake_robot.cpp  fake_robot_publisher.cpp  main.cpp  map_utils.cpp  planner_info_to_controller_t.c  simutest.cpp  test_QP.cpp
src/utils/: plotting.cpp
